--- a/templates/etc/fail2ban/jail.local.j2
+++ b/templates/etc/fail2ban/jail.local.j2
@@ -1,14 +1,11 @@
 [DEFAULT]
 
-# "ignoreip" can be an IP address, a CIDR mask or a DNS host
-ignoreip = 127.0.0.1/8
-bantime  = 600
-maxretry = 3
-
+ignoreip = 127.0.0.1/8 {{ firewall_whitelisted_hosts | join(' ') }}
+bantime  = {{ firewall_fail2ban_bantime }}
+maxretry = {{ firewall_fail2ban_maxretry }}
 destemail = {{ firewall_fail2ban_destemail }}
-
-{# TODO: manage banaction with ufw #}
-banaction = iptables-multiport
+#banaction = iptables-multiport
+banaction = ufw
 
 #
 # JAILS
